--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ yarn-error.log*
 **/*.log
 package-lock.json
 **/*.bun
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
